--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,10 +24,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.hive-src=src
 file.reference.jruby-complete.jar=lib/java/jruby-complete.jar
+file.reference.monkeybars-1.0.4.jar=lib/java/monkeybars-1.0.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jruby-complete.jar}
+    ${file.reference.jruby-complete.jar}:\
+    ${file.reference.monkeybars-1.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
