--- a/src/document/Bundle.properties
+++ b/src/document/Bundle.properties
@@ -1,2 +1,7 @@
 
 Document.title=Document
+Document.jMenu2.text=Edit
+FileMenu.text=File
+FileMenu.New=New
+Document.jMenu2.text_1=Edit
+Document.file_menu.text=File
