--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,6 +22,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/hive.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.h2-1.2.123.jar=lib/java/h2-1.2.123.jar
 file.reference.hive-src=src
 file.reference.jruby-complete.jar=lib/java/jruby-complete.jar
 file.reference.monkeybars-1.0.4.jar=lib/java/monkeybars-1.0.4.jar
@@ -29,7 +30,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jruby-complete.jar}:\
-    ${file.reference.monkeybars-1.0.4.jar}
+    ${file.reference.monkeybars-1.0.4.jar}:\
+    ${file.reference.h2-1.2.123.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
