--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,14 +24,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.h2-1.2.123.jar=lib/java/h2-1.2.123.jar
 file.reference.hive-src=src
+file.reference.jemmy.jar=features/lib/swinger/lib/swinger/jemmy.jar
 file.reference.jruby-complete.jar=lib/java/jruby-complete.jar
 file.reference.monkeybars-1.0.4.jar=lib/java/monkeybars-1.0.4.jar
+file.reference.quaqua-filechooser-only.jar=lib/java/quaqua-filechooser-only.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jruby-complete.jar}:\
     ${file.reference.monkeybars-1.0.4.jar}:\
-    ${file.reference.h2-1.2.123.jar}
+    ${file.reference.h2-1.2.123.jar}:\
+    ${file.reference.quaqua-filechooser-only.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
